[gd_scene load_steps=4 format=3 uid="uid://j77lq1vyxxe5"]

[ext_resource type="Theme" uid="uid://bkrlwg21fhprn" path="res://Autoloads/Resources/Themes/edit_button.tres" id="1_d2ie8"]
[ext_resource type="Script" uid="uid://58e8p3b5s4vd" path="res://Scenes/Main/MainUI/default_menu.gd" id="1_xyyv6"]
[ext_resource type="Texture2D" uid="uid://dt33eo8kxwh7w" path="res://Autoloads/Icons/icon_move_white.png" id="3_xyyv6"]

[node name="DefaultMenu" type="ScrollContainer"]
custom_minimum_size = Vector2(805, 1494)
offset_right = 805.0
offset_bottom = 1494.0
script = ExtResource("1_xyyv6")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 36
alignment = 1

[node name="YourTeamButton" type="Button" parent="MainContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_behavior_recursive = 1
theme = ExtResource("1_d2ie8")
theme_override_font_sizes/font_size = 88
text = "Edit Your Team"
icon = ExtResource("3_xyyv6")
icon_alignment = 2
expand_icon = true

[node name="OpponentTeamButton" type="Button" parent="MainContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_behavior_recursive = 1
theme = ExtResource("1_d2ie8")
theme_override_font_sizes/font_size = 88
text = "Edit Opponent Team"
icon = ExtResource("3_xyyv6")
icon_alignment = 2
expand_icon = true

[node name="OverlayButtton" type="Button" parent="MainContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_behavior_recursive = 1
theme = ExtResource("1_d2ie8")
theme_override_font_sizes/font_size = 88
text = "Edit Overlay"
icon = ExtResource("3_xyyv6")
icon_alignment = 2
expand_icon = true

[node name="AddFieldEffectsButton" type="Button" parent="MainContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_behavior_recursive = 1
theme = ExtResource("1_d2ie8")
theme_override_font_sizes/font_size = 88
text = "Add Field Effects"
icon = ExtResource("3_xyyv6")
icon_alignment = 2
expand_icon = true
